# trading_bot

./: .env.example  .gitignore  Agents.md  README.md  docker-compose-dev.yml  pyproject.toml
app/: main.py
app/api/: router.py
app/api/routes/: bot.py  dashboard.py  health.py  orders.py  positions.py  slack.py  upbit.py
app/core/: config.py  logging.py  state.py
app/db/: session.py
app/services/: bot_service.py  slack_socket.py  telegram_bot.py  upbit_client.py
app/services/brokers/: base.py  upbit.py
app/services/portfolio/: aggregator.py
app/ui/: routes.py
app/ui/static/: style.css
app/ui/templates/: base.html  dashboard.html  settings.html
docs/: API_REFERENCE.ko.md  ARCHITECTURE.ko.md  PROJECT_STATE.ko.md  SLACK_SETUP.ko.md  v1-spec.ko.md  v1-spec.md
migrations/versions/: be5cf3eb5116_initial_tables.py
trading_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
